--- a/apps/remix/app/styles/routes/index.module.scss
+++ b/apps/remix/app/styles/routes/index.module.scss
@@ -25,9 +25,6 @@
 .main {
   flex: 1;
   height: 100%;
-}
-
-.eventCards {
   overflow-y: auto;
   overflow-x: hidden;
 }
